# bridge

./: .gitignore  CMakeLists.txt  README.md  bridge.desktop  bridge.qrc  main.cpp
.github/workflows/: codeql.yml  release.yml
Tests/: CMakeLists.txt
Tests/proxy/: CMakeLists.txt  proxy.cpp
Tests/utils/: CMakeLists.txt  config.cpp
network/: Http.cpp  Http.h
proxy/: CMakeLists.txt  Clash.cpp  Clash.h  IpInfo.cpp  IpInfo.h  Provider.cpp  Provider.h  Proxy.cpp  Proxy.h  ProxyCmd.cpp  ProxyCmd.h
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  NewProxyWidget.cpp  NewProxyWidget.h  NewProxyWidget.ui  ProviderEditorWidget.cpp  ProviderEditorWidget.h  ProviderEditorWidget.ui  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui
utils/: AutoStart.cpp  AutoStart.h  Config.cpp  Config.h  Readable.cpp  Readable.h
